--- a/BSHomeWork7/all.scss
+++ b/BSHomeWork7/all.scss
@@ -3,6 +3,12 @@ body {
 }
 
 .navbar {
+    background-color: rgba(30, 30, 30, 0.9);
+    color: #fff;
+
+    a {
+        color: #d5d5d5;
+    }
 
     .navbar-nav {
         .dropdown {
@@ -27,6 +33,8 @@ body {
 
             .dropdown {
                 .dropdown-menu {
+                    background-color: #000;
+
                     >a {
                         &::before {
                             content: '▪ ';
@@ -40,6 +48,21 @@ body {
             img {
                 width: 18px;
             }
+
+            .dropdown {
+                .dropdown-menu {
+                    background-color: #000;
+                    padding: 20px 20px;
+
+                    .form-control {
+                        background-color: #000;
+                    }
+                }
+
+                .dropdown-search {
+                    min-width: 20rem;
+                }
+            }
         }
     }
 }
@@ -48,7 +71,7 @@ body {
 .carousel {
     .carousel-inner {
         .carousel-item {
-            height: 100vh;
+
 
             .carousel-caption {
                 top: 50%;
