--- a/BSHomeWork7/all.css
+++ b/BSHomeWork7/all.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   font-family: 'Nanum Gothic', sans-serif !important;
 }
@@ -6,26 +5,24 @@ body {
 .navbar {
   background-color: rgba(30, 30, 30, 0.9);
   color: #fff;
+  padding: 15px 50px;
 }
 
 .navbar a {
-  color: #d5d5d5;
+  color: #d5d5d5 !important;
+  font-size: 12px;
+}
+
+.navbar .navbar-toggler {
+  border: 1px solid #fff;
 }
 
 .navbar .navbar-nav .dropdown:hover > .dropdown-menu {
   display: block;
 }
 
-.navbar .navbar-nav:first-child .nav-item > a::before {
-  content: 'o ';
-}
-
 .navbar .navbar-nav:first-child .dropdown .dropdown-menu {
   background-color: #000;
-}
-
-.navbar .navbar-nav:first-child .dropdown .dropdown-menu > a::before {
-  content: '▪ ';
 }
 
 .navbar .navbar-nav:nth-child(2) img {
@@ -204,7 +201,8 @@ body {
 }
 
 .footer > .container {
-  padding: 50px 0;
+  padding-top: 50px;
+  padding-bottom: 50px;
   color: #888888;
 }
 
@@ -240,5 +238,17 @@ body {
 
 .footer .copyright p {
   color: #888888;
+}
+
+@media (max-width: 719px) {
+  .carousel .carousel-inner .carousel-item .carousel-caption h5 {
+    font-size: 20px;
+  }
+  .carousel .carousel-inner .carousel-item .carousel-caption h1 {
+    font-size: 75px;
+  }
+  .carousel .carousel-inner .carousel-item .carousel-caption a {
+    padding: 10px 30px;
+  }
 }
 /*# sourceMappingURL=all.css.map */
