--- a/BSHomeWork7/all.scss
+++ b/BSHomeWork7/all.scss
@@ -2,12 +2,20 @@ body {
     font-family: 'Nanum Gothic', sans-serif !important;
 }
 
+// 導覽列
 .navbar {
     background-color: rgba(30, 30, 30, 0.9);
     color: #fff;
+    padding: 15px 50px;
 
     a {
-        color: #d5d5d5;
+        color: #d5d5d5 !important;
+
+        font-size: 12px;
+    }
+
+    .navbar-toggler {
+        border: 1px solid #fff;
     }
 
     .navbar-nav {
@@ -23,23 +31,23 @@ body {
         }
 
         &:first-child {
-            .nav-item {
-                >a {
-                    &::before {
-                        content: 'o ';
-                    }
-                }
-            }
+            // .nav-item {
+            //     >a {
+            //         &::before {
+            //             content: 'o ';
+            //         }
+            //     }
+            // }
 
             .dropdown {
                 .dropdown-menu {
                     background-color: #000;
 
-                    >a {
-                        &::before {
-                            content: '▪ ';
-                        }
-                    }
+                    // >a {
+                    //     &::before {
+                    //         content: '▪ ';
+                    //     }
+                    // }
                 }
             }
         }
@@ -71,8 +79,6 @@ body {
 .carousel {
     .carousel-inner {
         .carousel-item {
-
-
             .carousel-caption {
                 top: 50%;
                 left: 50%;
@@ -247,7 +253,8 @@ body {
     }
 
     &>.container {
-        padding: 50px 0;
+        padding-top: 50px;
+        padding-bottom: 50px;
         color: #888888;
     }
 
@@ -283,6 +290,29 @@ body {
 
         p {
             color: #888888;
+        }
+    }
+}
+
+@media (max-width:719px) {
+    .carousel {
+        .carousel-inner {
+            .carousel-item {
+                .carousel-caption {
+                    h5 {
+                        font-size: 20px;
+                    }
+
+                    h1 {
+                        font-size: 75px;
+                    }
+
+                    a {
+                        padding: 10px 30px;
+                    }
+                }
+            }
+
         }
     }
 }
