--- a/BS-JSHomeWork3/all.scss
+++ b/BS-JSHomeWork3/all.scss
@@ -30,10 +30,22 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            border: 1px solid #aaa;
+
             cursor: pointer;
 
             &:hover {
-                border: 2px solid black;
+                border: 1px solid black;
+            }
+        }
+
+        input {
+            display: none;
+
+            &:checked {
+                &+.item {
+                    border: 1px solid red;
+                }
             }
         }
     }
