--- a/BS-JS-Hackathon1/all.scss
+++ b/BS-JS-Hackathon1/all.scss
@@ -7,6 +7,10 @@ body {
     .container-fluid {
         height: 100vh;
 
+        #pac-input {
+            width: 100%;
+        }
+
         #map {
             height: 100%;
             // height: 400px;
