--- a/BS-JS-Hackathon1-GoogleMapApi-MaskMap/all.scss
+++ b/BS-JS-Hackathon1-GoogleMapApi-MaskMap/all.scss
@@ -7,31 +7,91 @@ body {
     .container-fluid {
         height: 100vh;
 
-        #pac-input {
-            width: 100%;
-        }
+        .select-bar {
+            background-color: #eee;
 
-        #map {
-            height: 100%;
-            // height: 400px;
-        }
+            #pac-input {
+                width: 100%;
+            }
 
-        .area {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            height: 20vh;
+            .area {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+                height: 20vh;
 
-            select {
-                margin: 15px 0;
+                select {
+                    margin: 15px 0;
+                }
+            }
+
+            .card-list {
+                height: 80vh;
+                overflow: auto;
+
+                .card {
+                    width: 95%;
+                    margin: auto;
+                    padding: auto;
+                    border-radius: 15px;
+                    box-shadow: 0px 0px 10px #222;
+                    margin-top: 15px;
+                    cursor: pointer;
+
+                    .card-body {
+                        .mask-left {
+                            // text-align: center;
+                            width: 45%;
+                            padding: 10px 15px;
+                            border-radius: 25px 5px 25px 5px;
+                            color: #fff;
+
+                            .left-num {
+                                font-size: 32px;
+                                font-weight: 700;
+                            }
+
+                            &.gray {
+                                background-color: #d4d6d7;
+                            }
+
+                            &.orange {
+                                background-color: #e67e22;
+                            }
+
+                            &.green {
+                                background-color: #11787a;
+                            }
+                        }
+
+                        .card-title {
+                            margin-top: 15px;
+                            padding-left: 15px;
+                            border-left: 5px solid #00ffaa;
+                        }
+                    }
+                }
             }
         }
 
-        .list {
-            height: 80vh;
-            overflow: auto;
+        .map-box {
+            padding-left: 0px;
+
+            #map {
+                height: 100%;
+
+                // height: 400px;
+                .loading {
+                    width: 5rem;
+                    height: 5rem;
+                    color: red;
+                }
+            }
         }
 
+
+
+        // 舊的template
         .list-item {
             cursor: pointer;
             border-top: 1px solid #000;
