--- a/BS-JS-Hackathon1-GoogleMapApi-MaskMap/all.scss
+++ b/BS-JS-Hackathon1-GoogleMapApi-MaskMap/all.scss
@@ -38,6 +38,10 @@ body {
                     margin-top: 15px;
                     cursor: pointer;
 
+                    &:hover {
+                        background-color: #eee;
+                    }
+
                     .card-body {
                         .mask-left {
                             // text-align: center;
@@ -67,7 +71,23 @@ body {
                         .card-title {
                             margin-top: 15px;
                             padding-left: 15px;
-                            border-left: 5px solid #00ffaa;
+                            border-left: 5px solid #00ddaa;
+                            color: #00aabb;
+                            font-weight: 700;
+                        }
+
+                        .card-address {
+                            i {
+                                color: #5500aa;
+                                margin-right: 10px;
+                            }
+                        }
+
+                        .card-phone {
+                            i {
+                                color: #5500aa;
+                                margin-right: 10px;
+                            }
                         }
                     }
                 }
@@ -87,100 +107,30 @@ body {
                     color: red;
                 }
             }
-        }
 
+            #content {
+                p {
+                    font-size: 16px;
+                }
 
+                .info-title {
+                    color: #00aabb;
+                }
 
-        // 舊的template
-        .list-item {
-            cursor: pointer;
-            border-top: 1px solid #000;
+                .pop-adult,
+                .pop-child {
+                    color: #e67e22;
+                }
 
-            .list-adult {
-                padding: 0px 10px;
-                background-color: #44ffaa;
-            }
+                i {
+                    color: #5500aa;
+                    margin-right: 10px;
+                }
 
-            .list-child {
-                padding: 0px 10px;
-                background-color: #eeff44;
-            }
-
-            &:hover {
-                background-color: #ddd;
+                .pop-address {
+                    color: #00aabb;
+                }
             }
         }
     }
-}
-
-#description {
-    font-family: Roboto;
-    font-size: 15px;
-    font-weight: 300;
-}
-
-#infowindow-content .title {
-    font-weight: bold;
-}
-
-#infowindow-content {
-    display: none;
-}
-
-#map #infowindow-content {
-    display: inline;
-}
-
-.pac-card {
-    margin: 10px 10px 0 0;
-    border-radius: 2px 0 0 2px;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    outline: none;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-    background-color: #fff;
-    font-family: Roboto;
-}
-
-#pac-container {
-    padding-bottom: 12px;
-    margin-right: 12px;
-}
-
-.pac-controls {
-    display: inline-block;
-    padding: 5px 11px;
-}
-
-.pac-controls label {
-    font-family: Roboto;
-    font-size: 13px;
-    font-weight: 300;
-}
-
-#pac-input {
-    background-color: #fff;
-    font-family: Roboto;
-    font-size: 15px;
-    font-weight: 300;
-    margin-left: 12px;
-    padding: 0 11px 0 13px;
-    text-overflow: ellipsis;
-    width: 400px;
-}
-
-#pac-input:focus {
-    border-color: #4d90fe;
-}
-
-#title {
-    color: #fff;
-    background-color: #4d90fe;
-    font-size: 25px;
-    font-weight: 500;
-    padding: 6px 12px;
-}
-
-#target {
-    width: 345px;
 }
