--- a/BS-JS-Hackathon1-GoogleMapApi-MaskMap/all.scss
+++ b/BS-JS-Hackathon1-GoogleMapApi-MaskMap/all.scss
@@ -28,6 +28,8 @@ body {
             .card-list {
                 height: 80vh;
                 overflow: auto;
+                scroll-behavior: auto;
+                scroll-behavior: smooth;
 
                 .card {
                     width: 95%;
@@ -74,6 +76,16 @@ body {
                             border-left: 5px solid #00ddaa;
                             color: #00aabb;
                             font-weight: 700;
+                            display: flex;
+                            justify-content: space-between;
+
+                            i {
+                                color: #00aabb;
+
+                                &:hover {
+                                    color: #5500aa;
+                                }
+                            }
                         }
 
                         .card-address {
