--- a/BS-JS-Hackathon1-GoogleMapApi-MaskMap/all.scss
+++ b/BS-JS-Hackathon1-GoogleMapApi-MaskMap/all.scss
@@ -143,6 +143,10 @@ body {
                     color: #00aabb;
                 }
             }
+
+            .card {
+                bottom: 50px;
+            }
         }
     }
 }
