--- a/BS-JS-Hackathon1-GoogleMapApi-MaskMap/all.css
+++ b/BS-JS-Hackathon1-GoogleMapApi-MaskMap/all.css
@@ -13,11 +13,25 @@ body .container-fluid {
 html .container-fluid .select-bar,
 body .container-fluid .select-bar {
   background-color: #eee;
+  height: 100vh;
 }
 
 html .container-fluid .select-bar #pac-input,
 body .container-fluid .select-bar #pac-input {
-  width: 100%;
+  width: 85%;
+}
+
+html .container-fluid .select-bar .move-back,
+body .container-fluid .select-bar .move-back {
+  width: 15%;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+}
+
+html .container-fluid .select-bar .move-back i,
+body .container-fluid .select-bar .move-back i {
+  font-size: 22px;
+  color: orange;
 }
 
 html .container-fluid .select-bar .area,
@@ -30,17 +44,29 @@ body .container-fluid .select-bar .area {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
-  height: 20vh;
+  height: 180px;
+}
+
+html .container-fluid .select-bar .area .input-group,
+body .container-fluid .select-bar .area .input-group {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+html .container-fluid .select-bar .area .input-group input,
+body .container-fluid .select-bar .area .input-group input {
+  height: calc(1.5em + .75rem + 2px);
+  border: 1px solid #ced4da;
 }
 
 html .container-fluid .select-bar .area select,
 body .container-fluid .select-bar .area select {
-  margin: 15px 0;
+  margin: 10px 0;
 }
 
 html .container-fluid .select-bar .card-list,
 body .container-fluid .select-bar .card-list {
-  height: 80vh;
+  height: calc(100vh - 180px);
   overflow: auto;
   scroll-behavior: auto;
   scroll-behavior: smooth;
