--- a/BS-JS-Hackathon1-GoogleMapApi-MaskMap/all.scss
+++ b/BS-JS-Hackathon1-GoogleMapApi-MaskMap/all.scss
@@ -40,6 +40,7 @@ body {
 
                     input {
                         height: calc(1.5em + .75rem + 2px);
+                        padding: .375rem 1.75rem .375rem 1rem;
                         border: 1px solid #ced4da;
                     }
                 }
