--- a/BS-JS-Hackathon1-GoogleMapApi-MaskMap/all.css
+++ b/BS-JS-Hackathon1-GoogleMapApi-MaskMap/all.css
@@ -56,6 +56,7 @@ body .container-fluid .select-bar .area .input-group {
 html .container-fluid .select-bar .area .input-group input,
 body .container-fluid .select-bar .area .input-group input {
   height: calc(1.5em + .75rem + 2px);
+  padding: .375rem 1.75rem .375rem 1rem;
   border: 1px solid #ced4da;
 }
 
