行事曆初版完成

--- a/BS-JS-Hackathon2-Calendar/all.css
+++ b/BS-JS-Hackathon2-Calendar/all.css
@@ -1,5 +1,25 @@
 @charset "UTF-8";
-.container .calendar-month::after {
+.container {
+  color: #39C5BB;
+}
+
+.container .calender-header {
+  background-color: #fffd80;
+}
+
+.container .calender-header button {
+  color: #000;
+  font-weight: 700;
+  font-size: 40px;
+  background-color: #fffd80;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  border: 1px solid transparent;
+}
+
+.container .calender-header .calendar-month::after {
   content: '月';
 }
 
@@ -7,9 +27,14 @@
   width: 200px;
   border: 1px solid #000;
   text-align: center;
+  color: #fff;
+  font-size: 24px;
+  background-color: #555;
 }
 
 .container .calendar tbody td {
+  font-weight: 700;
+  vertical-align: top;
   width: 200px;
   height: 100px;
   border: 1px solid #000;
@@ -18,5 +43,17 @@
 
 .container .calendar tbody td:hover {
   background-color: #eee;
+}
+
+.container .calendar tbody td ul li {
+  border: 2px solid rgba(0, 0, 0, 0);
+  color: #000;
+  margin: 3px 0;
+  padding: 2px 2px;
+  overflow: hidden;
+}
+
+.container .calendar tbody td ul li:hover {
+  border: 2px solid #000;
 }
 /*# sourceMappingURL=all.css.map */
