--- a/BS-JS-Hackathon2-Calendar/all.scss
+++ b/BS-JS-Hackathon2-Calendar/all.scss
@@ -1,9 +1,25 @@
 .container {
-    .calendar-month {
-        &::after {
-            content: '月';
+    color: #39C5BB;
+
+    .calender-header {
+        background-color: #fffd80;
+
+        button {
+            color: #000;
+            font-weight: 700;
+            font-size: 40px;
+            background-color: #fffd80;
+            user-select: none;
+            border: 1px solid transparent;
+        }
+
+        .calendar-month {
+            &::after {
+                content: '月';
+            }
         }
     }
+
 
     .calendar {
         thead {
@@ -11,11 +27,16 @@
                 width: 200px;
                 border: 1px solid #000;
                 text-align: center;
+                color: #fff;
+                font-size: 24px;
+                background-color: #555;
             }
         }
 
         tbody {
             td {
+                font-weight: 700;
+                vertical-align: top;
                 width: 200px;
                 height: 100px;
                 border: 1px solid #000;
@@ -23,6 +44,22 @@
 
                 &:hover {
                     background-color: #eee;
+                }
+
+                ul {
+                    li {
+                        border: 2px solid rgba(0, 0, 0, 0);
+                        color: #000;
+                        margin: 3px 0;
+                        padding: 2px 2px;
+                        // width: 20px;
+                        overflow: hidden;
+
+                        &:hover {
+                            border: 2px solid #000;
+                            // color: red;
+                        }
+                    }
                 }
             }
         }
