--- a/BS-JSHomeWork7-Chart/all.scss
+++ b/BS-JSHomeWork7-Chart/all.scss
@@ -10,5 +10,12 @@
             height: 5rem;
             color: red;
         }
+
+        .error {
+            font-size: 60px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
     }
 }
