寫上步驟註解

--- a/BS-JS-HackAthon3-N-Puzzle/all.css
+++ b/BS-JS-HackAthon3-N-Puzzle/all.css
@@ -1,4 +1,4 @@
-.container .row #myCanvas {
-  border: 1px solid #000;
+.container #puzzle-area canvas {
+  vertical-align: bottom;
 }
 /*# sourceMappingURL=all.css.map */
