--- a/BS-JS-HackAthon3-N-Puzzle/all.scss
+++ b/BS-JS-HackAthon3-N-Puzzle/all.scss
@@ -1,10 +1,7 @@
 .container {
-    .row {
-
-        #myCanvas {
-            // width: 500px;
-            // height: 500px;
-            border: 1px solid #000;
+    #puzzle-area {
+        canvas {
+            vertical-align: bottom;
         }
     }
 }
